# heel

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release-assets.yml  release.yml
cli/src/: error.rs
cli/src/commands/: ipc.rs
docs/: use-private-heel-in-app.md  windows-sandbox-validation.md
docs/superpowers/plans/: 2026-04-24-windows-appcontainer-heel-implementation.md
docs/superpowers/specs/: 2026-04-24-windows-appcontainer-heel-design.md
nodejs/: Cargo.toml
nodejs/__tests__/: child-wait-with-output.test.mjs
nodejs/src/: child.rs  sandbox.rs
scripts/: windows-sandbox-validation.ps1
src/: command.rs  lib.rs  pty.rs  sandbox.rs  stdio.rs
src/platform/: mod.rs  windows.rs
src/platform/linux/: landlock_rules.rs  mod.rs  seccomp_filter.rs
src/platform/macos/: mod.rs
src/platform/windows/: acl.rs  job.rs  mod.rs  paths.rs  policy.rs  process.rs  profile.rs
src/python/: venv.rs
