[workspace]
members = [".", "nodejs"]

[package]
name = "heel"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Cross-platform native sandboxing library for running untrusted code"
repository = "https://github.com/lexoliu/heel"
keywords = ["sandbox", "security", "isolation", "python", "venv"]
categories = ["os", "development-tools"]

[[bin]]
name = "heel"
path = "src/bin/heel/main.rs"

[features]
default = ["python"]
python = ["which"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP proxy
hyper = { version = "1", features = ["http1", "server", "client"] }
http-body-util = "0.1"
bytes = "1.11.1"

# Runtime-agnostic async (smol-based by default)
executor-core = { version = "0.7", features = ["async-executor", "std"] }
async-net = "2"
async-io = "2"
futures-lite = "2"
blocking = "1"
smol = "2"

# Compile-time templates
askama = "0.12"
shell-escape = "0.1"
sha2 = "0.10"

# Terminal raw mode
crossterm = "0.29"

# I/O polling for non-blocking operations
polling = "3"

# Random number generation
rand = "0.8"

# Directory operations
remove_dir_all = "0.8"

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# PTY support for interactive shells
[target.'cfg(target_os = "macos")'.dependencies]
pty-process = "0.5"

# Python executable detection (optional)
[dependencies.which]
version = "7"
optional = true

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.4"
nix = { version = "0.29", features = ["process", "feature"] }

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
executor-core = { version = "0.7", features = ["tokio"] }
