[package]
name = "leash-nodejs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Node.js bindings for leash sandbox library"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core leash library
leash = { path = ".." }

# NAPI-RS for Node.js bindings
napi = { version = "2", default-features = false, features = [
    "async",
    "tokio_rt",
    "serde-json",
    "napi6",
] }
napi-derive = "2"

# Async runtime (required for NAPI tokio_rt)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
executor-core = { version = "0.7", features = ["tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
[package.metadata.cargo-machete]
ignored = ["serde", "serde_json", "thiserror", "tracing"]
